[*] edit api and test plan
